--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,8 +77,8 @@ LastLevel=/Game/Maps/DOOM_FanArt_EngineRoom_001
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1360.000 Y=800.000
+ScreenPosition=X=178.000 Y=169.000
+WindowSize=X=1390.000 Y=830.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -97,8 +97,8 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.142154
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.857846
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
 ContentBrowserTab1.ActiveTypeFilters=
@@ -904,6 +904,9 @@ DOOM_FanArt_EngineRoom_001_C.Tick=True
 DOOM_FanArt_EngineRoom_001_C.Replication=True
 DOOM_FanArt_EngineRoom_001_C.Input=True
 DOOM_FanArt_EngineRoom_001_C.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -966,6 +969,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Maps/test.test;
