--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,7 +78,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=178.000 Y=169.000
-WindowSize=X=1390.000 Y=830.000
+WindowSize=X=1400.000 Y=840.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -969,6 +969,16 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshes/WB_plateformRail.WB_plateformRail;
+RecentlyPlaced=/Game/Meshes/WB_bottomReactor.WB_bottomReactor;
+RecentlyPlaced=/Game/Meshes/WB_topReactor.WB_topReactor;
+RecentlyPlaced=/Game/Meshes/WB_base.WB_base;
+RecentlyPlaced=/Game/Meshes/WB_orb.WB_orb;
+RecentlyPlaced=/Game/Meshes/WB_ArmReactor.WB_ArmReactor;
+RecentlyPlaced=/Game/Meshes/WB_L1_plateform.WB_L1_plateform;
+RecentlyPlaced=/Game/Meshes/WB_stair.WB_stair;
+RecentlyPlaced=/Game/Meshes/WB_wall.WB_wall;/Engine/Transient.ActorFactoryStaticMesh_0
+RecentlyPlaced=/Game/Meshes/test.test;/Engine/Transient.ActorFactoryStaticMesh_0
 RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
