--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,6 +49,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@REGALIA
 LastExecutedLaunchName=REGALIA
+NewWindowPosition=(X=315,Y=163)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -78,7 +79,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=178.000 Y=169.000
-WindowSize=X=1400.000 Y=840.000
+WindowSize=X=1410.000 Y=850.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -105,7 +106,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Meshes/White_Boxing
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -669,6 +670,8 @@ BlueprintProfiler.TimeStamp=2017.06.08-02.07.01
 BlueprintProfiler.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2017.06.08-02.07.01
 BlueprintGraph.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.06.08-02.07.15
+MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/DOOM_FanArt_EngineRoom_001
@@ -907,6 +910,26 @@ DOOM_FanArt_EngineRoom_001_C.Actor=True
 Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -969,22 +992,26 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Meshes/WB_plateformRail.WB_plateformRail;
-RecentlyPlaced=/Game/Meshes/WB_bottomReactor.WB_bottomReactor;
-RecentlyPlaced=/Game/Meshes/WB_topReactor.WB_topReactor;
-RecentlyPlaced=/Game/Meshes/WB_base.WB_base;
-RecentlyPlaced=/Game/Meshes/WB_orb.WB_orb;
-RecentlyPlaced=/Game/Meshes/WB_ArmReactor.WB_ArmReactor;
-RecentlyPlaced=/Game/Meshes/WB_L1_plateform.WB_L1_plateform;
-RecentlyPlaced=/Game/Meshes/WB_stair.WB_stair;
-RecentlyPlaced=/Game/Meshes/WB_wall.WB_wall;/Engine/Transient.ActorFactoryStaticMesh_0
-RecentlyPlaced=/Game/Meshes/test.test;/Engine/Transient.ActorFactoryStaticMesh_0
-RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
-RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Game/Maps/test.test;
-RecentlyPlaced=/Game/test.test;
-RecentlyPlaced=/Game/test_Box001.test_Box001;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_ReactorPlateform.WB_ReactorPlateform;
+RecentlyPlaced=/Game/Meshes/Materials/M_DarkGray.M_DarkGray;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Panel.M_Tech_Panel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Brushed_Nickel.M_Metal_Brushed_Nickel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_plateformRail.WB_plateformRail;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_bottomReactor.WB_bottomReactor;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_topReactor.WB_topReactor;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_base.WB_base;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_orb.WB_orb;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_ArmReactor.WB_ArmReactor;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_L1_pathway.WB_L1_pathway;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_stair.WB_stair;
+RecentlyPlaced=/Game/Meshes/White_Boxing/WB_wall.WB_wall;/Engine/Transient.ActorFactoryStaticMesh_0
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=True
@@ -1001,5 +1028,26 @@ InstalledPlugins=Substance
 [AssetEditorToolkitTabLocation]
 /Game/Maps/DOOM_FanArt_EngineRoom_001.DOOM_FanArt_EngineRoom_001:PersistentLevel.DOOM_FanArt_EngineRoom_001=0
 /Game/Maps/test.test=1
+/Game/Meshes/Materials/White.White=0
+/Game/Meshes/Materials/Metal.Metal=0
+/Game/StarterContent/Materials/M_Metal_Brushed_Nickel.M_Metal_Brushed_Nickel=1
+/Game/Meshes/White_Boxing/WB_L1_pathway.WB_L1_pathway=0
+/Game/Meshes/Materials/M_DarkGray.M_DarkGray=0
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=LightingResults
+
+[MaterialEditor]
+LightDir=P=-39.999985 Y=27.499968 R=0.000000
+PrimType=1
 
 
