--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=445.000 Y=322.000
-WindowSize=X=1940.000 Y=1050.000
+WindowSize=X=1950.000 Y=1060.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +109,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes/Materials
+ContentBrowserTab1.SelectedPaths=/Game/FX/IES
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -697,6 +697,8 @@ ExternalImagePicker.TimeStamp=2017.06.08-02.07.09
 ExternalImagePicker.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.06.08-02.07.27
 TextureEditor.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2017.06.08-02.07.27
+SynthBenchmark.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/DOOM_FanArt_EngineRoom_001
@@ -1182,6 +1184,7 @@ ExponentialHeightFog.Tags=True
 ExponentialHeightFog.Activation=True
 ExponentialHeightFog.Cooking=True
 ExponentialHeightFog.Actor=True
+MapBuildDataRegistry.Lighting=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1244,8 +1247,8 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Meshes/Materials/M_orb.M_orb;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/Meshes/Materials/M_orb.M_orb;
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
 RecentlyPlaced=/Game/Meshes/Materials/MF_orb.MF_orb;
@@ -1298,6 +1301,7 @@ InstalledPlugins=Substance
 /Game/Meshes/White_Boxing/WB_HeroAssets.WB_HeroAssets=0
 /Game/Meshes/Materials/M_orb.M_orb=1
 /Game/Meshes/Materials/MF_orb.MF_orb=0
+/Game/Maps/DOOM_FanArt_EngineRoom_001_BuiltData.DOOM_FanArt_EngineRoom_001_BuiltData=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
