--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1282,26 +1282,26 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Snow/ParticleSystems/P_cameraParentedSnowBox.P_cameraParentedSnowBox;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Sigil_08.FX_Sigil_08;
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Atmospherics/Effects/P_Dust_Hanging_Ground_param.P_Dust_Hanging_Ground_param;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Atmospherics/Effects/P_Dust_Hanging_Ground_01.P_Dust_Hanging_Ground_01;
-RecentlyPlaced=/Game/FX/Elemental/Effects/FX_Snow_Cracks/Crack_02/FX/P_Crack_02_Burst.P_Crack_02_Burst;
-RecentlyPlaced=/Game/FX/Elemental/Effects/FX_Snow_Cracks/Crack_03/FX/P_Crack_03_Burst.P_Crack_03_Burst;
-RecentlyPlaced=/Game/FX/Elemental/Effects/FX_Snow_Cracks/Crack_03/FX/P_Crack_03_Burst_Distant.P_Crack_03_Burst_Distant;
-RecentlyPlaced=/Game/FX/Elemental/Effects/FX_Snow_Cracks/Crack_03/FX/P_Crack_03_Burst_Distant_upWall.P_Crack_03_Burst_Distant_upWall;
-RecentlyPlaced=/Game/FX/Elemental/Effects/FX_HammerHit/ParticleSystems/P_Crack_03_BurstRock.P_Crack_03_BurstRock;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Snow/ParticleSystems/P_Avalanche_Filler_Sphere.P_Avalanche_Filler_Sphere;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Hand_R.FX_Knight_Hand_R;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Feet.FX_Knight_Feet;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_KnightEye_Left.FX_KnightEye_Left;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Volcano/ParticleSystems/Lava.Lava;
+RecentlyPlaced=/Game/FX/Effects/Particles/Snow/P_BlowAcrossGround.P_BlowAcrossGround;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Atmospherics/Effects/P_Blowing_Snow.P_Blowing_Snow;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_DustAndDebris/ParticleSystems/P_DustAndDebris_Thinner.P_DustAndDebris_Thinner;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Atmospherics/Effects/P_Haze_Shot_060.P_Haze_Shot_060;
+RecentlyPlaced=/Game/FX/Elemental/Effects/FX_Distortion/ParticleSystems/P_HeatDistortion_knight.P_HeatDistortion_knight;
 RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_DustAndDebris/ParticleSystems/P_BreakAway_BackDebris.P_BreakAway_BackDebris;
-RecentlyPlaced=/Game/FX/Elemental/Effects/FX_Snow_Cracks/BigCrack/P_BigCrackEdges.P_BigCrackEdges;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Snow/ParticleSystems/P_Avalanche_Filler_Sphere.P_Avalanche_Filler_Sphere;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Snow/ParticleSystems/P_Avalanche_Filler.P_Avalanche_Filler;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Shoulder_Left.FX_Knight_Shoulder_Left;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Hand_R.FX_Knight_Hand_R;
 RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Hammer_Prefire.FX_Knight_Hammer_Prefire;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Fire/ParticleSystems/P_FireBall_ArcUP_SM.P_FireBall_ArcUP_SM;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Snow/ParticleSystems/P_doorcenter_snow_magical.P_doorcenter_snow_magical;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Feet.FX_Knight_Feet;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Back_MistAdd.FX_Knight_Back_MistAdd;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_HangingParticles/FX/DustOutside.DustOutside;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_HangingParticles/FX/CopyOfHangingDust02_Cave.CopyOfHangingDust02_Cave;
+RecentlyPlaced=/Game/FX/Elemental/Effects/FX_LavaBombs/Chunk_FireTrail.Chunk_FireTrail;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Snow/ParticleSystems/P_KnightSnow.P_KnightSnow;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Fire/ParticleSystems/P_FireBall_ArcUP.P_FireBall_ArcUP;
+RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Atmospherics/Effects/P_Dust_Hanging_Ground_01.P_Dust_Hanging_Ground_01;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=True
