--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=-62.000 Y=160.000
-WindowSize=X=2010.000 Y=1080.000
+WindowSize=X=2030.000 Y=1080.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +109,7 @@ ContentBrowserTab1.ActiveTypeFilters=ParticleSystem
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -137,7 +137,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Users/AzurePC Intel/Documents/GitHub/Enviro_2/Enviro_2/Content/Maps
+UNR=../../../../../../Users/AzurePC Intel/Desktop/test
 BRUSH=../../../../../Github/Enviro_2/Content/
 FBX=../../../../../Github/Enviro_2/Content/
 FBXAnim=../../../../../Github/Enviro_2/Content/
@@ -1283,14 +1283,17 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Meshes/ST_lv1.ST_lv1;
 RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
+RecentlyPlaced=/Game/Meshes/Materials/M_Purple.M_Purple;
+RecentlyPlaced=/Game/Meshes/Materials/white.white;
+RecentlyPlaced=/Game/Meshes/Materials/M_DarkGray.M_DarkGray;
+RecentlyPlaced=/Game/Meshes/ST_Stairs-platform2.ST_Stairs-platform2;
+RecentlyPlaced=/Game/Meshes/ST_lv1.ST_lv1;
 RecentlyPlaced=/Game/Meshes/crate.crate;
 RecentlyPlaced=/Game/Meshes/ST_HeroAsset.ST_HeroAsset;
 RecentlyPlaced=/Game/Meshes/ST_Stairs-platform.ST_Stairs-platform;
 RecentlyPlaced=/Game/Meshes/test/Stair.Stair;
 RecentlyPlaced=/Game/Meshes/test/crate.crate;
-RecentlyPlaced=/Game/Meshes/Materials/white.white;
 RecentlyPlaced=/Game/Meshes/test/ST_Wall-support.ST_Wall-support;
 RecentlyPlaced=/Game/Meshes/test/lv3.lv3;
 RecentlyPlaced=/Game/Meshes/test/lv2.lv2;
@@ -1300,9 +1303,6 @@ RecentlyPlaced=/Game/FX/Effects/Particles/Dust/PGPU_Dust_Vec_Fast.PGPU_Dust_Vec_
 RecentlyPlaced=/Game/FX/Effects/Particles/Dust/PGPU_Dust_Vec.PGPU_Dust_Vec;
 RecentlyPlaced=/Game/FX/Effects/Particles/Water/P_WaterFall_Mist_Light.P_WaterFall_Mist_Light;
 RecentlyPlaced=/Game/FX/Effects/Particles/Water/P_WaterFall2.P_WaterFall2;
-RecentlyPlaced=/Game/FX/Effects/Particles/Water/P_WaterFall.P_WaterFall;
-RecentlyPlaced=/Game/FX/Effects/Particles/Water/P_WaterDrops.P_WaterDrops;
-RecentlyPlaced=/Game/FX/Elemental/Effects/Fx_Snow/ParticleSystems/P_WallHole_snow.P_WallHole_snow;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
@@ -1343,6 +1343,7 @@ InstalledPlugins=Substance
 /Game/FX/Elemental/Elemental/Effects/Fx_Snow/ParticleSystems/P_doorcenter_snow_magical.P_doorcenter_snow_magical=1
 /Game/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Hand_R.FX_Knight_Hand_R=1
 /Game/Meshes/test/Stair.Stair=1
+/Game/Meshes/ST_Stairs-platform.ST_Stairs-platform=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
