--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=8.000 Y=152.000
-WindowSize=X=2050.000 Y=1080.000
+WindowSize=X=2090.000 Y=1080.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +109,7 @@ ContentBrowserTab1.ActiveTypeFilters=ParticleSystem
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -706,8 +706,9 @@ DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/DOOM_FanArt_Reactor_01
-MRUItem1=/Game/StarterContent/Maps/Minimal_Default
-MRUItem2=/Game/Maps/DOOM_FanArt_EngineRoom_001
+MRUItem1=/Game/Maps/DOOM_FanArt_Reactor_WB
+MRUItem2=/Game/StarterContent/Maps/Minimal_Default
+MRUItem3=/Game/Maps/DOOM_FanArt_EngineRoom_001
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bAutoSaveEnable=False
@@ -1224,6 +1225,22 @@ SkyLight.Actor=True
 Brush.TransformCommon=True
 Brush.BrushSettings=True
 Brush.Actor=True
+FbxImportUI.Animation=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1286,14 +1303,16 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Meshes/crate.crate;
-RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
-RecentlyPlaced=/Game/Meshes/ST_HeroAsset.ST_HeroAsset;
+RecentlyPlaced=/Game/Meshes/heroasset.heroasset;
 RecentlyPlaced=/Game/Meshes/Materials/white.white;
+RecentlyPlaced=/Game/Meshes/ST_Stairs-platform2.ST_Stairs-platform2;
 RecentlyPlaced=/Game/Meshes/ST_Reactor_Support.ST_Reactor_Support;
+RecentlyPlaced=/Game/Meshes/ST_HeroAsset.ST_HeroAsset;
+RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
+RecentlyPlaced=/Game/Meshes/ST_Wall-support.ST_Wall-support;
+RecentlyPlaced=/Game/Meshes/crate.crate;
 RecentlyPlaced=/Game/Meshes/Materials/M_Purple.M_Purple;
 RecentlyPlaced=/Game/Meshes/Materials/M_DarkGray.M_DarkGray;
-RecentlyPlaced=/Game/Meshes/ST_Stairs-platform2.ST_Stairs-platform2;
 RecentlyPlaced=/Game/Meshes/ST_lv1.ST_lv1;
 RecentlyPlaced=/Game/Meshes/ST_Stairs-platform.ST_Stairs-platform;
 RecentlyPlaced=/Game/Meshes/test/Stair.Stair;
@@ -1304,8 +1323,6 @@ RecentlyPlaced=/Game/Meshes/test/lv2.lv2;
 RecentlyPlaced=/Game/Meshes/test/lv1.lv1;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FX/Effects/Particles/Dust/PGPU_Dust_Vec_Fast.PGPU_Dust_Vec_Fast;
-RecentlyPlaced=/Game/FX/Effects/Particles/Dust/PGPU_Dust_Vec.PGPU_Dust_Vec;
-RecentlyPlaced=/Game/FX/Effects/Particles/Water/P_WaterFall_Mist_Light.P_WaterFall_Mist_Light;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
@@ -1321,7 +1338,7 @@ Emitter.Particles=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 FbxImportUI="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
