--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=8.000 Y=152.000
-WindowSize=X=2090.000 Y=1080.000
+WindowSize=X=2120.000 Y=1080.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +109,7 @@ ContentBrowserTab1.ActiveTypeFilters=ParticleSystem
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Meshes/Materials
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1303,26 +1303,26 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Meshes/heroasset.heroasset;
 RecentlyPlaced=/Game/Meshes/Materials/white.white;
+RecentlyPlaced=/Game/Meshes/ST_Stairs-platform_lv3.ST_Stairs-platform_lv3;
+RecentlyPlaced=/Game/Meshes/ST_HeroAsset.ST_HeroAsset;
+RecentlyPlaced=/Game/Meshes/ST_HeroAsset1.ST_HeroAsset1;
+RecentlyPlaced=/Game/Meshes/ST_lv3_Wall-support.ST_lv3_Wall-support;
+RecentlyPlaced=/Game/Meshes/ST_Wall-support.ST_Wall-support;
+RecentlyPlaced=/Game/Meshes/ST_Lv0-floor.ST_Lv0-floor;
+RecentlyPlaced=/Game/Meshes/ST_lv0.ST_lv0;
+RecentlyPlaced=/Game/Meshes/test/lv3.lv3;
+RecentlyPlaced=/Game/Meshes/test/lv2.lv2;
+RecentlyPlaced=/Game/Meshes/test/lv1.lv1;
+RecentlyPlaced=/Game/Meshes/heroasset.heroasset;
 RecentlyPlaced=/Game/Meshes/ST_Stairs-platform2.ST_Stairs-platform2;
 RecentlyPlaced=/Game/Meshes/ST_Reactor_Support.ST_Reactor_Support;
-RecentlyPlaced=/Game/Meshes/ST_HeroAsset.ST_HeroAsset;
 RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
-RecentlyPlaced=/Game/Meshes/ST_Wall-support.ST_Wall-support;
 RecentlyPlaced=/Game/Meshes/crate.crate;
 RecentlyPlaced=/Game/Meshes/Materials/M_Purple.M_Purple;
 RecentlyPlaced=/Game/Meshes/Materials/M_DarkGray.M_DarkGray;
 RecentlyPlaced=/Game/Meshes/ST_lv1.ST_lv1;
 RecentlyPlaced=/Game/Meshes/ST_Stairs-platform.ST_Stairs-platform;
-RecentlyPlaced=/Game/Meshes/test/Stair.Stair;
-RecentlyPlaced=/Game/Meshes/test/crate.crate;
-RecentlyPlaced=/Game/Meshes/test/ST_Wall-support.ST_Wall-support;
-RecentlyPlaced=/Game/Meshes/test/lv3.lv3;
-RecentlyPlaced=/Game/Meshes/test/lv2.lv2;
-RecentlyPlaced=/Game/Meshes/test/lv1.lv1;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/FX/Effects/Particles/Dust/PGPU_Dust_Vec_Fast.PGPU_Dust_Vec_Fast;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
@@ -1338,7 +1338,7 @@ Emitter.Particles=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 FbxImportUI="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
