--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,8 +81,8 @@ LastLevel=/Game/Maps/DOOM_FanArt_Reactor_01
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=8.000 Y=152.000
-WindowSize=X=2120.000 Y=1080.000
+ScreenPosition=X=-12.000 Y=0.000
+WindowSize=X=2140.000 Y=1080.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +109,7 @@ ContentBrowserTab1.ActiveTypeFilters=ParticleSystem
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Meshes
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1304,6 +1304,7 @@ bConvertSceneUnit=False
 
 [PlacementMode]
 RecentlyPlaced=/Game/Meshes/Materials/white.white;
+RecentlyPlaced=/Game/Meshes/ST_Lv1_Xplatform.ST_Lv1_Xplatform;
 RecentlyPlaced=/Game/Meshes/ST_Stairs-platform_lv3.ST_Stairs-platform_lv3;
 RecentlyPlaced=/Game/Meshes/ST_HeroAsset.ST_HeroAsset;
 RecentlyPlaced=/Game/Meshes/ST_HeroAsset1.ST_HeroAsset1;
@@ -1322,7 +1323,6 @@ RecentlyPlaced=/Game/Meshes/crate.crate;
 RecentlyPlaced=/Game/Meshes/Materials/M_Purple.M_Purple;
 RecentlyPlaced=/Game/Meshes/Materials/M_DarkGray.M_DarkGray;
 RecentlyPlaced=/Game/Meshes/ST_lv1.ST_lv1;
-RecentlyPlaced=/Game/Meshes/ST_Stairs-platform.ST_Stairs-platform;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
@@ -1338,7 +1338,7 @@ Emitter.Particles=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 FbxImportUI="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
@@ -1365,6 +1365,7 @@ InstalledPlugins=Substance
 /Game/Elemental/Effects/Fx_Magic/Effects/FX_Knight_Hand_R.FX_Knight_Hand_R=1
 /Game/Meshes/test/Stair.Stair=1
 /Game/Meshes/ST_Stairs-platform.ST_Stairs-platform=1
+/Game/Meshes/ST_lv1.ST_lv1=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1414,5 +1415,8 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[SelectionDetails]
+PreserveScaleRatio=False
 
 
