--- a/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Enviro_2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -82,7 +82,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=-12.000 Y=0.000
-WindowSize=X=2140.000 Y=1080.000
+WindowSize=X=2150.000 Y=1080.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -109,7 +109,7 @@ ContentBrowserTab1.ActiveTypeFilters=ParticleSystem
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Meshes/Materials
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1304,6 +1304,8 @@ bConvertSceneUnit=False
 
 [PlacementMode]
 RecentlyPlaced=/Game/Meshes/Materials/white.white;
+RecentlyPlaced=/Game/Meshes/wb_lv3.wb_lv3;
+RecentlyPlaced=/Game/Meshes/ST_reactor.ST_Reactor;
 RecentlyPlaced=/Game/Meshes/ST_Lv1_Xplatform.ST_Lv1_Xplatform;
 RecentlyPlaced=/Game/Meshes/ST_Stairs-platform_lv3.ST_Stairs-platform_lv3;
 RecentlyPlaced=/Game/Meshes/ST_HeroAsset.ST_HeroAsset;
@@ -1321,8 +1323,6 @@ RecentlyPlaced=/Game/Meshes/ST_Reactor_Support.ST_Reactor_Support;
 RecentlyPlaced=/Game/Meshes/6_1_scaleman.6_1_scaleman;
 RecentlyPlaced=/Game/Meshes/crate.crate;
 RecentlyPlaced=/Game/Meshes/Materials/M_Purple.M_Purple;
-RecentlyPlaced=/Game/Meshes/Materials/M_DarkGray.M_DarkGray;
-RecentlyPlaced=/Game/Meshes/ST_lv1.ST_lv1;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
@@ -1338,7 +1338,7 @@ Emitter.Particles=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 FbxImportUI="\"Object.Mesh.StaticMeshImportData.Object.Transform.ImportRotation\" "
